--- a/style.css
+++ b/style.css
@@ -38,6 +38,12 @@ body {
     height: 400px;
 }
 
+/* Prevent admin bar overlapping site navigation menu */
+.admin-bar .navbar {
+    position: absolute;
+    top: 2rem;
+}
+
 @media screen and (max-width: 960px) {
     .single-post-video {
         max-width: 100%;
